Added button for grid size

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Super etch-a-sketch</h1>
+    <button id="gridSizeButton">Size of grid</button>
     <div id="grid">
 
     </div>
