Stetic changes and button to clear grid

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 </head>
 <body>
     <h1>Super etch-a-sketch</h1>
-    <button id="gridSizeButton">Size of grid</button>
+
+    <div class="container">
+        <button id="gridSizeButton">Size of grid</button>
+        <button id="clearGridButton">Clear grid</button>
+    </div>
+    
     <div id="grid">
 
     </div>
