Added rainbow mode

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="container">
         <button id="gridSizeButton">Size of grid</button>
         <button id="clearGridButton">Clear grid</button>
+        <button id="rainbowButton">Toggle to Rainbow mode</button>
     </div>
     
     <div id="grid">
